--- a/_includes/head.html
+++ b/_includes/head.html
@@ -161,10 +161,15 @@
   <link rel="stylesheet" href="{{ "/assets/css/staticman.css" | relative_url }}">
   {% endif %}
 
-  {% assign favicon_exists = site.static_files | where: "path", "/favicon.ico" | size %}
-  {% if favicon_exists == 1 %}
-  <link rel="icon" href="{{ '/favicon.ico' | relative_url }}" />
-  {% endif %}
+  {% comment %} Check for various favicon formats {% endcomment %}
+{% assign favicon_ico = site.static_files | where: "path", "/favicon.ico" | size %}
+{% assign favicon_png = site.static_files | where: "path", "/favicon.png" | size %}
+
+{% if favicon_ico == 1 %}
+<link rel="icon" href="{{ '/favicon.ico' | relative_url }}" />
+{% elsif favicon_png == 1 %}
+<link rel="icon" type="image/png" href="{{ '/favicon.png' | relative_url }}" />
+{% endif %}
 
   {% if page.head-extra %}
     {% for file in page.head-extra %}
